--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -37,36 +37,28 @@ jobs:
         options: --name openrefine
     steps:
       - uses: actions/checkout@v6
+
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v5
         with:
           role-to-assume: arn:aws:iam::631969445205:role/github-action-role
           role-session-name: offsets-db-etl-role-session
           aws-region: ${{ env.AWS_DEFAULT_REGION }}
-      - uses: actions/setup-python@v6
+
+      - name: Setup Pixi
+        uses: prefix-dev/setup-pixi@v0.9.3
         with:
-          python-version: '3.10'
-          cache: 'pip'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
-          python -m pip install -r requirements-dev.txt
-
-      - name: Install package
-        run: |
-          python -m pip install .
+          cache: true
+          cache-write: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
 
       - name: List packages
-        run: |
-          python -m pip list
+        run: pixi list
 
       - name: Install CLI
-        run: |
-          offsets-db-data-orcli install --destination /usr/local/bin
-          offsets-db-data-orcli --help
+        run: pixi run offsets-db-data-orcli install --destination /usr/local/bin
+
+      - name: Show CLI help
+        run: pixi run offsets-db-data-orcli --help
 
       - name: Run tests
-        run: |
-          python -m pytest -s
+        run: pixi run test-cov
