--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -13,25 +13,24 @@ jobs:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
-      - uses: actions/setup-python@v6
-        name: Install Python
-        with:
-          python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install setuptools setuptools-scm wheel twine check-manifest
+      - name: Setup Pixi
+        uses: prefix-dev/setup-pixi@v0.9.3
+        with:
+          cache: true
+          cache-write: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
 
       - name: Build tarball and wheels
         run: |
           git clean -xdf
           git restore -SW .
-          python -m build --sdist --wheel .
+          pixi run pip install build
+          pixi run python -m build --sdist --wheel .
 
       - name: Check built artifacts
         run: |
-          python -m twine check dist/*
+          pixi run pip install twine check-manifest
+          pixi run python -m twine check dist/*
           pwd
           if [ -f dist/offsets-db-data-unknown.tar.gz ]; then
             echo "❌ INVALID VERSION NUMBER"
@@ -39,6 +38,7 @@ jobs:
           else
             echo "✅ Looks good"
           fi
+
       - uses: actions/upload-artifact@v5
         with:
           name: releases
@@ -48,14 +48,17 @@ jobs:
     needs: build-artifacts
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-python@v6
-        name: Install Python
+      - name: Setup Pixi
+        uses: prefix-dev/setup-pixi@v0.9.3
         with:
-          python-version: '3.10'
+          cache: true
+          cache-write: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
+
       - uses: actions/download-artifact@v6
         with:
           name: releases
           path: dist
+
       - name: List contents of built dist
         run: |
           ls -ltrh
@@ -64,9 +67,8 @@ jobs:
       - name: Verify the built dist/wheel is valid
         if: github.event_name == 'push'
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install dist/offsets_db_data*.whl
-          python -c "import offsets_db_data; print(offsets_db_data.__version__)"
+          pixi run pip install dist/offsets_db_data*.whl
+          pixi run python -c "import offsets_db_data; print(offsets_db_data.__version__)"
 
   upload-to-pypi:
     needs: test-built-dist
