--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,20 +3,19 @@
     requires      = ["setuptools-scm>=8", "setuptools>=80"]
 
 [tool.pixi.workspace]
-    channels    = ["conda-forge"]
-    platforms   = ["osx-arm64", "linux-64"]
-    preview     = ["pixi-build"]
+    channels  = ["conda-forge"]
+    platforms = ["linux-64", "osx-arm64"]
 
 [tool.pixi.pypi-dependencies]
-offsets-db-data = { path = ".", editable = true }
+    offsets-db-data = { path = ".", editable = true }
 
 [tool.pixi.tasks]
     # Development tasks
-    test         = "pytest -s"
-    test-cov     = "pytest -n auto --cov=./ --cov-report=xml --cov-report=term-missing --verbose"
-    lint         = "ruff check ."
     format       = "ruff format ."
     format-check = "ruff format --check ."
+    lint         = "ruff check ."
+    test         = "pytest -s"
+    test-cov     = "pytest -n auto --cov=./ --cov-report=xml --cov-report=term-missing --verbose"
 
     # Documentation tasks
     docs-build = "sphinx-build docs docs/_build"
@@ -26,59 +25,32 @@ offsets-db-data = { path = ".", editable = true }
     install-cli = "offsets-db-data-orcli install --destination /usr/local/bin"
 
 [tool.pixi.dependencies]
-    python              = ">=3.10"
-    country_converter   = "==1.0.0"
-    dask                = "==2025.2.0"
-    fastparquet         = "==2024.11"
-    fsspec              = "==2025.2.0"
-    intake-parquet      = ">=0.3.0"
-    intake              = "<2"
-    pandas              = "==2.2.2"
-    pandera             = "==0.23"
-    pydantic            = ">=2.10,<2.11"
-    pyjanitor           = ">=0.23,<0.24"
-    requests            = ">=2.31.0"
-    s3fs                = "==2025.2.0"
-    universal_pathlib   = ">=0.1.3"
-    numpy               = ">=2"
-    typer               = ">=0.15.2"
-    click               = "==8.1.8" # pin until https://github.com/fastapi/typer/discussions/1215 is resolved
-    pip                 = "*"
-
-
-
-# We are using `pixi-build-python` in order to build a Python package
-[tool.pixi.package.build.backend]
-name = "pixi-build-python"
-version = "==0.4.0"
 
 [tool.pixi.feature.dev.dependencies]
+    hypothesis    = ">=6.111,<6.112"
+    openpyxl      = "*"
     pytest        = ">=7.4,<7.5"
     pytest-cov    = ">=4.1,<4.2"
     pytest-mock   = ">=3.10,<3.11"
     pytest-xdist  = ">=3.3,<3.4"
     requests-mock = ">=1.11,<1.12"
-    hypothesis    = ">=6.111,<6.112"
-    openpyxl      = "*"
     ruff          = "*"
 
 [tool.pixi.feature.docs.dependencies]
-    sphinx-book-theme   = ">=1.1.2"
-    myst-nb             = "*"
-    sphinx              = "*"
-    sphinx-copybutton   = "*"
-    sphinx-design       = "*"
-    sphinxext-opengraph = "*"
-    jupyterlab          = "*"
-    sphinx-togglebutton = "*"
+    # jupyterlab          = "*"
+    # myst-nb             = "*"
+    # sphinx              = "*"
+    # sphinx-book-theme   = ">=1.1.2"
+    # sphinx-copybutton   = "*"
+    # sphinx-design       = "*"
+    # sphinx-togglebutton = "*"
+    # sphinxext-opengraph = "*"
 
 [tool.pixi.environments]
+    all     = ["dev", "docs"]
     default = ["dev"]
     dev     = ["dev"]
     docs    = ["docs"]
-    all     = ["dev", "docs"]
-
-
 
 [project]
     authors = [{ name = "CarbonPlan", email = "tech@carbonplan.org" }]
@@ -105,48 +77,45 @@ version = "==0.4.0"
     # Dependencies are also defined here for pip compatibility
     dependencies = [
         "country_converter==1.0.0",
-        "dask==2025.2.0",
-        "fastparquet==2024.11",
-        "fsspec==2025.2.0",
+        "dask>=2025.2.0",
+        "fastparquet>=2024.11",
+        "fsspec>=2025.2.0",
         "intake-parquet>=0.3.0",
         "intake<2",
-        "pandas==2.2.2",
-        "pandera==0.23",
-        "pydantic>=2.10,<2.11",
-        "pyjanitor>=0.23,<0.24",
-        "requests>=2.31.0",
-        "s3fs==2025.2.0",
-        "universal_pathlib>=0.1.3",
         "numpy>=2",
-        "typer>=0.15.2",
-        "click==8.1.8", # pin until https://github.com/fastapi/typer/discussions/1215 is resolved
+        "pandas>=2.2.2",
+        "pandera>=0.23",
+        "pydantic>=2.10",
+        "pyjanitor==0.23.*",
+        "requests>=2.31.0",
+        "s3fs>=2025.2.0",
+        "typer>=0.15.4",
+        "universal_pathlib>=0.1.3",
     ]
 
     dynamic = ["version"]
 
 [project.optional-dependencies]
+    all = ["offsets-db-data[dev,docs]"]
     dev = [
-        "pytest>=7.4,<7.5",
+        "hypothesis>=6.111,<6.112",
+        "openpyxl",
         "pytest-cov>=4.1,<4.2",
         "pytest-mock>=3.10,<3.11",
         "pytest-xdist>=3.3,<3.4",
+        "pytest>=7.4,<7.5",
         "requests-mock>=1.11,<1.12",
-        "hypothesis>=6.111,<6.112",
-        "openpyxl",
         "ruff",
     ]
     docs = [
-        "sphinx-book-theme>=1.1.2",
+        "jupyterlab",
         "myst-nb",
         "sphinx",
+        "sphinx-book-theme>=1.1.2",
         "sphinx-copybutton",
         "sphinx-design",
-        "sphinxext-opengraph",
-        "jupyterlab",
         "sphinx-togglebutton",
-    ]
-    all = [
-        "offsets-db-data[dev,docs]",
+        "sphinxext-opengraph",
     ]
 
 [project.scripts]
