Update Cercarbono mappings in projects-raw-columns-mapping.json

--- a/offsets_db_data/configs/projects-raw-columns-mapping.json
+++ b/offsets_db_data/configs/projects-raw-columns-mapping.json
@@ -2,7 +2,7 @@
   "country": {
     "american-carbon-registry": "Project Site Country",
     "art-trees": "Program  Country",
-    "cercarbono": "Country",
+    "cercarbono": null,
     "climate-action-reserve": "Project Site Country",
     "gold-standard": "Country",
     "verra": "Country/Area"
@@ -10,7 +10,7 @@
   "listed_at": {
     "american-carbon-registry": null,
     "art-trees": null,
-    "cercarbono": "Creation date",
+    "cercarbono": null,
     "climate-action-reserve": "Project Listed Date",
     "gold-standard": null,
     "verra": null
@@ -18,7 +18,7 @@
   "name": {
     "american-carbon-registry": "Project Name",
     "art-trees": "Program Name",
-    "cercarbono": "Project Name",
+    "cercarbono": "name",
     "climate-action-reserve": "Project Name",
     "gold-standard": "Project Name",
     "verra": "Name"
@@ -26,7 +26,7 @@
   "original_protocol": {
     "american-carbon-registry": "Project Methodology/Protocol",
     "art-trees": null,
-    "cercarbono": "Protocol",
+    "cercarbono": "evaluation_criteria",
     "climate-action-reserve": "Project Type",
     "gold-standard": "Methodology",
     "verra": "Methodology"
@@ -34,7 +34,7 @@
   "project_id": {
     "american-carbon-registry": "Project ID",
     "art-trees": "Program ID",
-    "cercarbono": "Project ID",
+    "cercarbono": "code",
     "climate-action-reserve": "Project ID",
     "gold-standard": "GSID",
     "verra": "ID"
@@ -42,7 +42,7 @@
   "proponent": {
     "american-carbon-registry": null,
     "art-trees": "Sovereign Program Developer",
-    "cercarbono": "Project proponent",
+    "cercarbono": "owner",
     "climate-action-reserve": "Project Owner",
     "gold-standard": "Project Developer Name",
     "verra": "Proponent"
@@ -50,7 +50,7 @@
   "status": {
     "american-carbon-registry": null,
     "art-trees": "Status",
-    "cercarbono": "Project Stage",
+    "cercarbono": "stage",
     "climate-action-reserve": "Status",
     "gold-standard": "Status",
     "verra": "Status"
