Add processing method for Cercarbono transactions and update column mapping

--- a/offsets_db_data/configs/credits-raw-columns-mapping.json
+++ b/offsets_db_data/configs/credits-raw-columns-mapping.json
@@ -63,6 +63,18 @@
       "vintage": "Vintage"
     }
   },
+  "cercarbono": {
+    "retirements": {
+      "project_id": null,
+      "quantity": null,
+      "retirement_account": null,
+      "retirement_beneficiary": null,
+      "retirement_note": null,
+      "retirement_reason": null,
+      "transaction_date": "date",
+      "vintage": "vintage"
+    }
+  },
   "climate-action-reserve": {
     "cancellations": {
       "project_id": "Project ID",
