Rename process_cercarbono_transactions to process_cercarbono_credits and add process_isometric_credits function for Isometric credit processing

--- a/offsets_db_data/configs/credits-raw-columns-mapping.json
+++ b/offsets_db_data/configs/credits-raw-columns-mapping.json
@@ -129,6 +129,28 @@
       "vintage": "Vintage"
     }
   },
+  "isometric": {
+    "issuances": {
+      "project_id": "project_id",
+      "quantity": "credit_batch_size_total.credits",
+      "retirement_account": null,
+      "retirement_beneficiary": null,
+      "retirement_note": null,
+      "retirement_reason": null,
+      "transaction_date": "issued_at",
+      "vintage": null
+    },
+    "retirements": {
+      "project_id": "project_id",
+      "quantity": "credit_batch_size_total.credits",
+      "retirement_account": "owner.name",
+      "retirement_beneficiary": "beneficiary.name",
+      "retirement_note": "notes",
+      "retirement_reason": "purposes",
+      "transaction_date": "retired_at",
+      "vintage": null
+    }
+  },
   "verra": {
     "transactions": {
       "project_id": null,
