--- a/offsets_db_data/configs/projects-raw-columns-mapping.json
+++ b/offsets_db_data/configs/projects-raw-columns-mapping.json
@@ -41,7 +41,7 @@
     "cercarbono": "code",
     "climate-action-reserve": "Project ID",
     "gold-standard": "GSID",
-    "isometric": "short_code",
+    "isometric": "id",
     "verra": "ID"
   },
   "proponent": {
