--- a/offsets_db_data/configs/all-protocol-mapping.json
+++ b/offsets_db_data/configs/all-protocol-mapping.json
@@ -2,6 +2,7 @@
   "acm0001": {
     "category": "ghg-management",
     "known-strings": [
+      "CDM - ACM0001: Flaring or use of landfill gas",
       "ACM0001: “Flaring or use of landfill gas” Version 19.0 and ACM0022: “Alternative waste treatment processes” Version 3.0",
       "ACM0001 Flaring or use of landfill gas",
       "ACM0001; ACM0022",
@@ -29,6 +30,8 @@
   "acm0002": {
     "category": "renewable-energy",
     "known-strings": [
+      "ACM0002: Grid-connected electricity generation from renewable sources / ACM0006: Electricity and heat generation from biomass",
+      "CDM - ACM0002: Grid-connected electricity generation from renewable sources",
       "CDM Approved ACM0002 Grid-connected electricity generation from renewable sources, version 21.0",
       "CDM methodology ACM0002 “Grid-connected electricity generation from renewable sources” version 21.0",
       "ACM 0002: Grid-connected electricity generation from renewable sources - Version 21.0",
@@ -194,7 +197,10 @@
   },
   "acm0003": {
     "category": "fuel-switching",
-    "known-strings": ["ACM0003"],
+    "known-strings": [
+      "CDM - ACM0003: Partial substitution of fossil fuels in cement or quicklime manufacture",
+      "ACM0003"
+    ],
     "program": "cdm",
     "sub-category": "industrial-processes",
     "url": "https://cdm.unfccc.int/methodologies/documentation/meth_booklet.pdf#ACM0003"
@@ -207,6 +213,8 @@
     "category": "fuel-switching",
     "sub-category": "biomass",
     "known-strings": [
+      "ACM0002: Grid-connected electricity generation from renewable sources / ACM0006: Electricity and heat generation from biomass",
+      "CDM - ACM0006: Electricity and heat generation from biomass",
       "ACM0006 Electricity and heat generation from biomass residues",
       "ACM0006",
       "ACM0002; ACM0006",
@@ -216,7 +224,10 @@
     "url": "https://cdm.unfccc.int/methodologies/documentation/meth_booklet.pdf#ACM0006"
   },
   "acm0007": {
-    "known-strings": ["ACM0007"],
+    "known-strings": [
+      "CDM - ACM0007: Conversion from single cycle to combined cycle power generation",
+      "ACM0007"
+    ],
     "program": "cdm"
   },
   "acm0008": {
@@ -284,6 +295,7 @@
     "category": "ghg-management",
     "is_methane": true,
     "known-strings": [
+      "ACM0014: Treatment of wastewater",
       "ACM0014 Treatment of wastewater",
       "Emission reductions through wastewater treatment",
       "ACM0014"
@@ -337,6 +349,7 @@
   "acm0022": {
     "category": "ghg-management",
     "known-strings": [
+      "ACM0022: Alternative waste treatment processes",
       "ACM0022: Alternative waste treatment process Version 03.0 ",
       "ACM0022:Large-scale Consolidated Methodology Alternative waste treatment processes(Version 03.0)",
       "ACM0022 Alternative waste treatment processes",
@@ -604,7 +617,10 @@
   },
   "am0026": {
     "category": "renewable-energy",
-    "known-strings": ["AM0026"],
+    "known-strings": [
+      "AM0026: Methodology for zero-emissions grid-connected electricity generation from renewable sources in Chile or in countries with merit order based dispatch grid",
+      "AM0026"
+    ],
     "program": "cdm",
     "url": "https://cdm.unfccc.int/methodologies/documentation/meth_booklet.pdf#AM0026"
   },
@@ -662,6 +678,14 @@
     "known-strings": ["AM0046"],
     "program": "cdm",
     "url": "https://cdm.unfccc.int/methodologies/documentation/meth_booklet.pdf#AM0046"
+  },
+  "am0049": {
+    "category": "fuel-switching",
+    "known-strings": [
+      "CDM - AM0049: Methodology for gas based energy generation in an industrial facility"
+    ],
+    "program": "cdm",
+    "url": "https://cdm.unfccc.int/methodologies/documentation/meth_booklet.pdf#AM0049"
   },
   "am0059": {
     "category": "energy-efficiency",
@@ -773,6 +797,7 @@
   "ams-i-c": {
     "category": "fuel-switching",
     "known-strings": [
+      "AMS-I.C.: Thermal energy production with or without electricity",
       "AMS-I.C.; AMS-I.F.; AMS-III.H.",
       "AMS-I.C.: Thermal energy production with or without electricity - Version 22.0",
       "AMS-I.C.: Thermal energy production with or without electricity --- Version 22.02",
@@ -810,6 +835,7 @@
   "ams-i-d": {
     "category": "renewable-energy",
     "known-strings": [
+      "CDM - AMS-I.D.: Grid connected renewable electricity generation",
       "AMS-I.D.; AMS-III.F.; AMS-III.Y",
       "AMS-I.D.; AMS-III.D.; AMS-III.H.; AMS-III.O.; AMS-III.AQ",
       "AMS-I.D. \"Grid-connected renewable electricity generation” (Version 18)",
@@ -945,6 +971,7 @@
   "ams-i-f": {
     "category": "renewable-energy",
     "known-strings": [
+      "CDM - AMS-I.F.: Renewable electricity generation for captive use and mini-grid",
       "AMS-I.C.; AMS-I.F.; AMS-III.H.",
       "AMS-I.F.: Renewable electricity generation for captive use and mini-grid ---Version 5.0  ",
       "AMS I.F Renewable Electricity Generation for Captive use and mini grid version 5.0",
@@ -1011,6 +1038,7 @@
   "ams-i-l": {
     "category": "renewable-energy",
     "known-strings": [
+      "AMS-I.L.: Electrification of rural communities using renewable energy",
       "AMS.I.J1; AMS-I.L.",
       "AMS-I.L.",
       "AMS-I.L. Electrification of rural communities using renewable energy"
@@ -1035,7 +1063,11 @@
   },
   "ams-ii-d": {
     "category": "energy-efficiency",
-    "known-strings": ["AMS-II.D.", "ACM0002; AMS-I.D.; AMS-II.D."],
+    "known-strings": [
+      "CDM - AMS-II.D: Energy efficiency and fuel switching measures for industrial facilities",
+      "AMS-II.D.",
+      "ACM0002; AMS-I.D.; AMS-II.D."
+    ],
     "program": "cdm"
   },
   "ams-ii-e": {
@@ -1100,6 +1132,7 @@
   "ams-iii-aj": {
     "category": "energy-efficiency",
     "known-strings": [
+      "AMS-III.AJ.: Recovery and recycling of materials from solid wastes",
       "AMS-III.AJ.; AMS-III.AJ1",
       "AMS-III.AJ.",
       "AMS-III.AJ. Recovery and recycling of materials from solid wastes"
@@ -1296,6 +1329,7 @@
     "category": "ghg-management",
     "is_methane": true,
     "known-strings": [
+      "AMS-III.F: Avoidance of methane emissions through composting",
       "AMS-I.D.; AMS-III.F.; AMS-III.Y",
       "AMS-I.F.; AMS-III.E.; VM0044",
       "AMS-III.F. Avoidance of methane emissions through controlled biological treatment of biomass",
@@ -1339,6 +1373,7 @@
     "category": "ghg-management",
     "is_methane": true,
     "known-strings": [
+      "CDM - AMS-III.H.: Methane recovery in wastewater treatment",
       "AMS-III.H.; AMS-III.AQ",
       "AMS-I.C.; AMS-I.F.; AMS-III.H.",
       "AMS-I.D.; AMS-III.D.; AMS-III.H.; AMS-III.O.; AMS-III.AQ",
@@ -1431,6 +1466,14 @@
     ],
     "program": "cdm"
   },
+  "ams-iii-u": {
+    "category": "fuel-switching",
+    "sub-category": "transportation",
+    "known-strings": [
+      "AMS-III.U.: Cable Cars for Mass Rapid Transit System (MRTS)"
+    ],
+    "program": "cdm"
+  },
   "ams-iii-y": {
     "category": "ghg-management",
     "is_methane": true,
@@ -1473,6 +1516,7 @@
   "ar-acm0003": {
     "category": "forest",
     "known-strings": [
+      "CDM - AR-ACM0003: Afforestation and reforestation of lands except wetlands",
       "ACM0003; VM0042",
       "AR-AMS0003; AR-AMS0007; AR-ACM0003; AR-AM0014",
       "VM0026; AR-ACM0003; VM0042",
@@ -1529,6 +1573,7 @@
   "ar-ams0003": {
     "category": "forest",
     "known-strings": [
+      "CDM - AR-AMS0003: Afforestation and reforestation project activities implemented on wetlands",
       "AR-AMS0003; AR-AMS0007; AR-ACM0003; AR-AM0014",
       "AR-AMS0003"
     ],
@@ -1823,6 +1868,8 @@
   "unknown": {
     "category": "unknown",
     "known-strings": [
+      "Early Retirement",
+      "Not defined",
       "Other",
       "Not Provided",
       "Not provided",
@@ -2056,7 +2103,7 @@
     "sub-category": "industrial-processes"
   },
   "vm0044": {
-    "category": "biochar",
+    "category": "biomass-cdr",
     "known-strings": ["VM0044", "AMS-I.F.; AMS-III.E.; VM0044"],
     "program": "verra",
     "url": "https://verra.org/methodologies/vm0044-methodology-for-biochar-utilization-in-soil-and-non-soil-applications/"
@@ -2120,5 +2167,80 @@
     ],
     "program": "vcs",
     "url": "https://verra.org/methodologies/vmr0006-methodology-for-installation-of-high-efficiency-firewood-cookstoves/"
+  },
+  "ccb-redd": {
+    "category": "forest",
+    "known-strings": [
+      "CCB - M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Level"
+    ],
+    "program": "ccb",
+    "url": "https://www.cercarbono.com/wp-content/uploads/2023/01/REDD-Methodology-V-1.3.1.pdf"
+  },
+  "ccb-reforest": {
+    "category": "forest",
+    "known-strings": [
+      "CCB - M/UT/F-A01: Methodology To Implement GHG Removal Projects Through Reforestation, Forest Restoration and the Establishment of Woody Crop"
+    ],
+    "program": "ccb",
+    "url": "https://www.cercarbono.com/wp-content/uploads/2021/11/Forest-and-Woody-Crops-Methodology-V.1.1.pdf"
+  },
+  "ccb-renewables": {
+    "category": "renewable-energy",
+    "known-strings": [
+      "CCB - M/E-ER01: Methodology for the realization of GHG emissions reduction projects by the use of renewable energy"
+    ],
+    "program": "ccb"
+  },
+  "iso-biochar": {
+    "category": "biomass-cdr",
+    "known-strings": ["biochar"],
+    "program": "iso",
+    "url": "https://isometric.com/pathways/biochar"
+  },
+  "iso-erw": {
+    "category": "alkalinity-cdr",
+    "known-strings": ["enhanced-weathering-agriculture"],
+    "program": "iso"
+  },
+  "iso-dac": {
+    "category": "air-capture",
+    "known-strings": ["direct-air-capture"],
+    "program": "iso"
+  },
+  "iso-bio-oil": {
+    "category": "biomass-cdr",
+    "known-strings": ["bio-oil-geological-storage"],
+    "program": "iso"
+  },
+  "iso-bio-geo": {
+    "category": "biomass-cdr",
+    "known-strings": ["biomass-geological-storage"],
+    "program": "iso",
+    "url": "https://isometric.com/pathways/biomass-geological-storage"
+  },
+  "iso-wastewater": {
+    "category": "alkalinity-cdr",
+    "known-strings": ["wastewater-alkalinity-enhancement"],
+    "program": "iso"
+  },
+  "iso-river": {
+    "category": "alkalinity-cdr",
+    "known-strings": ["river-alkalinity-enhancement"],
+    "program": "iso"
+  },
+  "iso-bio-burial": {
+    "category": "biomass-cdr",
+    "known-strings": ["subsurface-biomass"],
+    "program": "iso"
+  },
+  "iso-bio-ccs": {
+    "category": "biomass-cdr",
+    "known-strings": ["biogenic-capture-and-storage"],
+    "program": "iso"
+  },
+  "iso-refor": {
+    "category": "forest",
+    "known-strings": ["reforestation"],
+    "program": "iso"
   }
 }
